# claude-telegram

./: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
job-sift/job_sift/: classifier.py  orchestrator.py  render.py
signal-brief/: .gitignore  README.md  pyproject.toml
signal-brief/config/: conferences.json  feeds.yaml  newsletters.yaml  twitter_accounts.yaml
signal-brief/signal_brief/: __init__.py  config.py  daily_note.py  exposure.py  filter.py  render.py  schema.py  telegram_client.py  vault_agent.py
signal-brief/signal_brief/orchestrators/: evening.py  morning.py  weekly.py
signal-brief/signal_brief/sources/: __init__.py  conferences.py  newsletters.py  rss.py  twitter.py
signal-brief/tests/: smoke_pipeline.py
src/: index.ts
src/handlers/: commands.ts  photo.ts  text.ts  voice.ts
src/lib/: claude.ts  env.ts  push.ts  session.ts  vault.ts
systemd/: claude-telegram.service  signal-brief-evening.service  signal-brief-evening.timer  signal-brief-morning.service  signal-brief-morning.timer  signal-brief-weekly.service  signal-brief-weekly.timer
